# stardrift

./: .aiignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  build.rs  build_wasm.sh  index.html  initializer.mjs
.github/workflows/: build-binaries.yml  build.yml  ci.yml  deploy-pages.yml  deploy.yml  manual-release.yml  release.yml  test-release-build.yml  test-release.yml
.run/: Run many_body_simulation (wasm).run.xml  Run many_body_simulation.run.xml  Test main__tests.run.xml
benches/: README.md  integrator_benchmarks.rs  integrators.rs  octree.rs  octree_benchmarks.rs  physics_benchmarks.rs
configs/benchmark_profiles/: balanced.toml  fast_inaccurate.toml  high_accuracy.toml  stress_test.toml
crates/stardrift/: Cargo.toml
crates/stardrift-macros/: Cargo.toml  README.md
crates/stardrift-macros/src/: lib.rs
crates/stardrift-macros/tests/: test_macro.rs
crates/stardrift-macros/tests/ui/: empty_default.stderr  missing_default.rs  missing_default.stderr  tuple_struct.stderr  unit_struct.stderr
crates/stardrift/src/: config.rs  events.rs  lib.rs  main.rs  prelude.rs  test_utils.rs
crates/stardrift/src/physics/: components.rs  math.rs  octree.rs
crates/stardrift/src/physics/integrators/: pefrl.rs  runge_kutta.rs
crates/stardrift/src/plugins/: attribution.rs  controls.rs  diagnostics_hud.rs  simulation_diagnostics.rs  trails.rs  visualization.rs
crates/stardrift/src/plugins/controls/: constants.rs  mod.rs
crates/stardrift/src/plugins/controls/buttons/: barycenter.rs  diagnostics.rs  pause.rs  trails.rs
crates/stardrift/src/plugins/screenshot/: automated.rs  mod.rs
crates/stardrift/src/plugins/simulation/: actions.rs  components.rs  mod.rs
crates/stardrift/src/resources/: mod.rs
crates/stardrift/tests/: integrator_accuracy.rs
docs/: simulation-diagnostics-implementation-plan.md  simulation-speed-control-implementation-plan.md
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: test_macro.rs
macros/tests/ui/: empty_default.rs  empty_default.stderr  enum_not_supported.rs  enum_not_supported.stderr  missing_default.rs  tuple_struct.rs  unit_struct.rs
src/: cli.rs  color.rs  config.rs  diagnostics.rs  diagnostics_hud.rs  events.rs  lib.rs  main.rs  math.rs  messages.rs  octree.rs  prelude.rs  simulation_hud.rs  stars.rs  states.rs  test_utils.rs
src/components/: body.rs  mod.rs  trail.rs
src/physics/: aabb3d.rs  components.rs  math.rs  mod.rs  octree.rs  recursive_octree.rs  resources.rs  stars.rs
src/physics/integrators/: explicit_euler.rs  heun.rs  mod.rs  pefrl.rs  registry.rs  runge_kutta.rs  semi_implicit_euler.rs  symplectic_euler.rs  velocity_verlet.rs
src/physics/octree/: mod.rs  recursive.rs
src/plugins/: attribution.rs  camera.rs  controls.rs  diagnostics.rs  diagnostics_hud.rs  embedded_assets.rs  keep_awake.rs  mod.rs  simulation.rs  simulation_diagnostics.rs  trails.rs  visualization.rs
src/plugins/controls/: builder.rs  mod.rs
src/plugins/controls/buttons/: barycenter.rs  diagnostics.rs  mod.rs  octree.rs  pause.rs  quit.rs  restart.rs  screenshot.rs  trails.rs
src/plugins/screenshot/: automated.rs  manual.rs
src/plugins/simulation/: actions.rs  components.rs  mod.rs  physics.rs
src/resources/: mod.rs
src/systems/: camera.rs  config.rs  input.rs  loading.rs  mod.rs  physics.rs  simulation_actions.rs  trails.rs  ui.rs  visualization.rs
src/utils/: color.rs  math.rs  mod.rs
stardrift-macros/: Cargo.toml
stardrift-macros/tests/: ui_tests.rs
stardrift-macros/tests/ui/: empty_default.rs  enum_not_supported.rs  tuple_struct.rs  unit_struct.rs
tests/: determinism_test.rs  integrator_accuracy.rs
web/: index.html  initializer.mjs  tailwind.css
