[package]
name = "stardrift"
version = "0.0.28"
edition = "2024"
license = "CC0-1.0"
repository = "https://github.com/emilyst/stardrift"
publish = false
description = "N-body gravity simulation toy that provides a real-time visualization"

[profile.dev]
debug = 2
opt-level = 0

[profile.dev.package."*"]
opt-level = 2

[profile.release]
codegen-units = 1
debug = 0
lto = true
opt-level = 3
panic = "abort"
strip = true

[profile.bench]
inherits = "release"

[build-dependencies]
chrono = "0.4"

[dependencies]
bevy_panorbit_camera = "0.27.0"
chrono = "0.4"
config = "0.15.12"
directories = "6.0.0"
libm = "0.2.15"
rand = "0.9.1"
rand_chacha = "0.9"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.0"
webbrowser = { version = "1.0", features = ["hardened"] }

[dependencies.bevy]
version = "0.16.1"
default-features = false
features = [
    "default_no_std",
    "libm",
    "zstd",
    "reflect_functions",
    "reflect_documentation",
    "bevy_ui",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_log",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "hdr",
    "multi_threaded",
    "sysinfo_plugin",
    "tonemapping_luts",
    "webgl2",
    "x11",
    "png",
]

[dev-dependencies]
criterion = { version = "0.7.0", features = ["csv_output", "html_reports"] }

[[bin]]
name = "stardrift"
path = "src/main.rs"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"
getrandom = { version = "0.3.3", features = ["wasm_js"] }

# cargo-release configuration
[package.metadata.release]
allow-branch = ["main"]
sign-commit = true
sign-tag = true
push = false
publish = false
tag-name = "v{{version}}"
pre-release-commit-message = "chore: release v{{version}}"
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{{version}}] - {{date}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "\\[Unreleased\\]: https://github.com/emilyst/stardrift/compare/v([0-9\\.\\-a-z]+)\\.\\.\\.HEAD", replace = "[Unreleased]: https://github.com/emilyst/stardrift/compare/v{{version}}...HEAD\n[{{version}}]: https://github.com/emilyst/stardrift/compare/v$1...v{{version}}" }
]

[[bench]]
name = "octree_benchmarks"
harness = false

[[bench]]
name = "integrator_benchmarks"
harness = false

[lints.clippy]
type_complexity = "allow"
