[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.37"
edition = "2024"
license = "CC0-1.0"
repository = "https://github.com/emilyst/stardrift"
authors = ["Emily Strickland"]

[workspace.dependencies]
# Shared dependencies across workspace
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["derive", "parsing"] }
trybuild = "1.0"

# Internal crates
stardrift-macros = { path = "crates/stardrift-macros" }

[profile.dev]
debug = 2
opt-level = 0

[profile.dev.package."*"]
opt-level = 2

[profile.release]
codegen-units = 1
debug = 0
lto = true
opt-level = 3
panic = "abort"
strip = true

[profile.bench]
inherits = "release"

# cargo-release configuration for workspace
[workspace.metadata.release]
allow-branch = ["main"]
sign-commit = true
sign-tag = true
push = false
publish = false
tag-name = "v{{version}}"
pre-release-commit-message = "chore: release v{{version}}"
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{{version}}] - {{date}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "\\[Unreleased\\]: https://github.com/emilyst/stardrift/compare/v([0-9\\.\\-a-z]+)\\.\\.\\.HEAD", replace = "[Unreleased]: https://github.com/emilyst/stardrift/compare/v{{version}}...HEAD\n[{{version}}]: https://github.com/emilyst/stardrift/compare/v$1...v{{version}}" }
]
