[package]
name = "macros"
edition = "2024"
license = "CC0-1.0"
publish = false
description = "Procedural macros for Stardrift configuration"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["derive", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"

[package.metadata.release]
release = false

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
trybuild = "1.0"
