[package]
name = "stardrift-macros"
version = "0.0.0"  # Internal use only - not synced with workspace
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Procedural macros for stardrift configuration"

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true

[package.metadata.release]
release = false

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
trybuild.workspace = true
