[package]
name = "stardrift"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "N-body gravity simulation toy that provides a real-time visualization"

[build-dependencies]
chrono.workspace = true

[dependencies]
bevy_panorbit_camera = "0.27.0"
chrono.workspace = true
clap = { version = "4.5", features = ["derive"] }
config = "0.15.12"
directories = "6.0.0"
libm = "0.2.15"
rand = "0.9.1"
rand_chacha = "0.9"
serde.workspace = true
stardrift-macros.workspace = true
toml = "0.9.0"
webbrowser = { version = "1.0", features = ["hardened"] }

[dependencies.bevy]
version = "0.16.1"
default-features = false
features = [
    "default_no_std",
    "libm",
    "zstd",
    "reflect_functions",
    "reflect_documentation",
    "bevy_ui",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_log",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "hdr",
    "multi_threaded",
    "sysinfo_plugin",
    "tonemapping_luts",
    "webgl2",
    "x11",
    "png",
]

[dev-dependencies]
criterion = { version = "0.7.0", features = ["csv_output", "html_reports"] }

[lib]
name = "stardrift"
path = "src/lib.rs"

[[bin]]
name = "stardrift"
path = "src/main.rs"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"
getrandom = { version = "0.3.3", features = ["wasm_js"] }

[[bench]]
name = "octree"
harness = false

[[bench]]
name = "integrators"
harness = false

[package.metadata.release]
shared-version = true
pre-release-replacements = [
  {file="../../CHANGELOG.md", search="## \\[Unreleased\\]", replace="## [Unreleased]\n\n## [{{version}}] - {{date}}", exactly=1},
]

[lints.clippy]
type_complexity = "allow"
